feat: 新增“音乐软件歌词显示”组件

--- a/Controls/Components/LyricsDisplaySettingsControl.axaml
+++ b/Controls/Components/LyricsDisplaySettingsControl.axaml
@@ -79,6 +79,20 @@
                        <ToggleSwitch IsChecked="{Binding Settings.KeepLyricsWindowBottom, Mode=TwoWay}" />
                    </controls:SettingsExpander.Footer>
                </controls:SettingsExpander>
+
+             <!-- 底部版权 -->
+            <TextBlock Text="Added by SystemTools"
+                       Foreground="Gray"
+                       FontSize="12"
+                       HorizontalAlignment="Center"
+                       Margin="0,40,0,0"
+                       Opacity="0.7" />
+            <TextBlock Text="Programmer_Wang ©2026"
+                       Foreground="Gray"
+                       FontSize="12"
+                       HorizontalAlignment="Center"
+                       Margin="0,40,0,0"
+                       Opacity="0.7" />
             </StackPanel>
         </ScrollViewer>
     </Grid>
