--- a/Controls/Components/NetworkStatusSettingsControl.axaml
+++ b/Controls/Components/NetworkStatusSettingsControl.axaml
@@ -36,6 +36,19 @@
                         </controls:SettingsExpander.Footer>
                     </controls:SettingsExpander>
 
+                <!-- 底部版权 -->
+            <TextBlock Text="Added by SystemTools"
+                       Foreground="Gray"
+                       FontSize="12"
+                       HorizontalAlignment="Center"
+                       Margin="0,40,0,0"
+                       Opacity="0.7" />
+            <TextBlock Text="Programmer_Wang ©2026"
+                       Foreground="Gray"
+                       FontSize="12"
+                       HorizontalAlignment="Center"
+                       Margin="0,40,0,0"
+                       Opacity="0.7" />
             </StackPanel>
         </ScrollViewer>
     </Grid>
