feat: 添加http检查和自动检测功能 https://github.com/Programmer-MrWang/SystemTools/issues/6

--- a/Controls/Components/NetworkStatusComponent.axaml
+++ b/Controls/Components/NetworkStatusComponent.axaml
@@ -13,11 +13,12 @@
     Loaded="NetworkStatusComponent_OnLoaded"
     Unloaded="NetworkStatusComponent_OnUnloaded"
     mc:Ignorable="d">
-    <Grid DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=local:NetworkStatusComponent}}"
-          TextElement.FontSize="{DynamicResource MainWindowBodyFontSize}">
+    <Grid
+        DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=local:NetworkStatusComponent}}"
+        TextElement.FontSize="{DynamicResource MainWindowBodyFontSize}">
         <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
             <TextBlock Text="{Binding Settings.DisplayText, Mode=OneWay}" />
-            <TextBlock Text="{Binding StatusText, Mode=OneWay}" 
+            <TextBlock Text="{Binding StatusText, Mode=OneWay}"
                        Foreground="{Binding StatusBrush}" />
         </StackPanel>
     </Grid>
