--- a/Controls/Components/LyricsDisplaySettingsControl.axaml
+++ b/Controls/Components/LyricsDisplaySettingsControl.axaml
@@ -13,15 +13,16 @@
     d:DesignWidth="800"
     x:TypeArguments="settings:LyricsDisplaySettings"
     mc:Ignorable="d">
-    <Grid DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:LyricsDisplaySettingsControl}}">
+    <Grid
+        DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:LyricsDisplaySettingsControl}}">
         <ScrollViewer>
             <StackPanel>
                 <!-- 警告信息 -->
-                <controls:InfoBar IsOpen="True" 
-                  IsClosable="True"
-                  Severity="Warning"
-                  Margin="0,0,0,12"
-                  Message="使用前请确保音乐软件已启用桌面歌词显示（横排/单行/关闭翻译）且不贴近屏幕上侧边缘&#x0A;您可通过调整桌面歌词的 长/宽 和下方的 缩放设置 以达到最佳效果（一般需手动缩短桌面歌词长度）&#x0A;不建议使用组件宽度限制，这可能会导致歌词显示不完整" />
+                <controls:InfoBar IsOpen="True"
+                                  IsClosable="True"
+                                  Severity="Warning"
+                                  Margin="0,0,0,12"
+                                  Message="使用前请确保音乐软件已启用桌面歌词显示（横排/单行/关闭翻译）且不贴近屏幕上侧边缘&#x0A;您可通过调整桌面歌词的 长/宽 和下方的 缩放设置 以达到最佳效果（一般需手动缩短桌面歌词长度）&#x0A;不建议使用组件宽度限制，这可能会导致歌词显示不完整" />
 
                 <!-- 音乐软件选择 -->
                 <controls:SettingsExpander
@@ -42,49 +43,49 @@
                 </controls:SettingsExpander>
 
                 <controls:SettingsExpander
-                     Header="歌词显示缩放"
-                     Description="调整歌词显示大小比例"
-                     Margin="0,6,0,0"
-                     IconSource="{ci:FluentIconSource &#xE10B;}">
-                   <controls:SettingsExpander.Footer>
-                     <Slider MinWidth="150"
-                     Minimum="0.3"
-                     Maximum="3.0"
-                     TickFrequency="0.1"
-                     Value="{Binding Settings.ImageScale, Mode=TwoWay}" />
-                   </controls:SettingsExpander.Footer>
-               </controls:SettingsExpander>
+                    Header="歌词显示缩放"
+                    Description="调整歌词显示大小比例"
+                    Margin="0,6,0,0"
+                    IconSource="{ci:FluentIconSource &#xE10B;}">
+                    <controls:SettingsExpander.Footer>
+                        <Slider MinWidth="150"
+                                Minimum="0.3"
+                                Maximum="3.0"
+                                TickFrequency="0.1"
+                                Value="{Binding Settings.ImageScale, Mode=TwoWay}" />
+                    </controls:SettingsExpander.Footer>
+                </controls:SettingsExpander>
 
-               <!-- 歌词刷新率设置 -->
-               <controls:SettingsExpander
+                <!-- 歌词刷新率设置 -->
+                <controls:SettingsExpander
                     Header="歌词刷新率"
                     Description="对于配置较低电脑建议提高数值，但会导致歌词显示延迟；建议100；重启 ClassIsland 以应用该设置"
                     Margin="0,6,0,0"
                     IconSource="{ci:FluentIconSource &#xE8E1;}">
-                   <controls:SettingsExpander.Footer>
-                       <NumericUpDown MinWidth="100"
-                                      Minimum="25"
-                                      Maximum="1000"
-                                      Increment="25"
-                                      Value="{Binding Settings.RefreshRate, Mode=TwoWay}" />
-                   </controls:SettingsExpander.Footer>
-               </controls:SettingsExpander>
+                    <controls:SettingsExpander.Footer>
+                        <NumericUpDown MinWidth="100"
+                                       Minimum="25"
+                                       Maximum="1000"
+                                       Increment="25"
+                                       Value="{Binding Settings.RefreshRate, Mode=TwoWay}" />
+                    </controls:SettingsExpander.Footer>
+                </controls:SettingsExpander>
 
-                 <!-- 保持歌词窗口置底 -->
-               <controls:SettingsExpander
+                <!-- 保持歌词窗口置底 -->
+                <controls:SettingsExpander
                     Header="保持歌词窗口置底（BETA）"
                     Description="强制将歌词窗口置底（每80ms/暂不适用网易云音乐）;请在上侧调整好样式再使用此功能！"
                     Margin="0,6,0,0"
                     IconSource="{ci:FluentIconSource &#xF4AB;}">
-                   <controls:SettingsExpander.Footer>
-                       <ToggleSwitch IsChecked="{Binding Settings.KeepLyricsWindowBottom, Mode=TwoWay}" />
-                   </controls:SettingsExpander.Footer>
-               </controls:SettingsExpander>
+                    <controls:SettingsExpander.Footer>
+                        <ToggleSwitch IsChecked="{Binding Settings.KeepLyricsWindowBottom, Mode=TwoWay}" />
+                    </controls:SettingsExpander.Footer>
+                </controls:SettingsExpander>
 
                 <Label HorizontalAlignment="Center"
-                   Foreground="{DynamicResource MaterialDesignBodyLight}">
-                Added by SystemTools
-            </Label>
+                       Foreground="{DynamicResource MaterialDesignBodyLight}">
+                    Added by SystemTools
+                </Label>
             </StackPanel>
         </ScrollViewer>
     </Grid>
