feat: 链接 Lyricify Lite 使用帮助

--- a/Controls/Components/LyricsDisplaySettingsControl.axaml
+++ b/Controls/Components/LyricsDisplaySettingsControl.axaml
@@ -31,7 +31,8 @@
                     IconSource="{ci:FluentIconSource &#xE342;}">
                     <controls:SettingsExpander.Footer>
                         <ComboBox MinWidth="150"
-                                  SelectedIndex="{Binding Settings.SelectedMusicSoftware, Mode=TwoWay}">
+                                  SelectedIndex="{Binding Settings.SelectedMusicSoftware, Mode=TwoWay}"
+                                  SelectionChanged="MusicSoftwareComboBox_SelectionChanged">
                             <ComboBoxItem>QQ音乐</ComboBoxItem>
                             <ComboBoxItem>网易云音乐</ComboBoxItem>
                             <ComboBoxItem>酷狗音乐</ComboBoxItem>
